traefik/ingress-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboardroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.minikube.home`) && (PathPrefix(`/dashboard`) || Host(`traefik.minikube.home`) && PathPrefix(`/api`))
    kind: Rule
    services:
      - kind: TraefikService
        name: api@internal
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`graphql.minikube.home`) && PathPrefix(`/products`)
    kind: Rule
    services:
    - name: products
      port: 8081
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo.minikube.home`) && PathPrefix(`/`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.minikube.home`) && PathPrefix(`/`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
